<resources>
    <string name="app_name">Lost Pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Подтвердите пароль</string>
    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!-- MapFragment -->
    <string name="my_account">My Account</string>
    <string name="map">Map</string>
    <string name="marks">Marks</string>
    <!-- RegistrationFragment -->
    <string name="addLogin">Придумайте логин</string>
    <string name="addPassword">Придумайте пароль</string>
    <string name="addName">Ваше имя</string>
    <string name="phone">Номер телефона</string>
    <string name="phoneIsIncorrect">Введите настоящий номер телефона</string>
    <string name="phoneHelp">Начните с 8 или +7</string>
    <string name="notEquallyPasswordFields">Поля не совпадают</string>
    <string name="equallyPasswordFields">Поля должны совпадать</string>
    <string name="fieldIsNull">Полe обязательно к заполнению</string>
    <!-- AddMarkFragment -->
    <string name="describedOfPet">Опишите животное своими словами</string>
    <string name="typeOfPet">Тип животного</string>
    <string name="colorOfPet">Окрас</string>
    <string name="save">Сохранить</string>
    <!-- ListOfMarks -->
    <string name="authorOfMark">Автор метки</string>
    <!-- AccountFragment -->
    <string name="userName">Имя</string>
    <string name="userNumber">Номер телефона</string>
    <string name="edit">Редактирование</string>
    <string name="logOutOfAccount">Выход из аккаунта</string>
    <string name="deleteMark">Удалить метку</string>
    <string name="editMark">Здесь должно было быть редактирование юзера. Можете позвонить разработчику и напомнить ему об этом.</string>
    <!-- DetailFragment -->
    <string name="getInTouchAuthor">Связаться с автором</string>
    <string name="btnPhoneCall">btnPhoneCall</string>
    <string name="no">Пожалуй нет</string>
    <string name="yes">Позвонить</string>
    <!-- EditUserFragment -->
    <string name="newLogin">Ваш новый логин</string>
    <string name="newName">Новое имя</string>
    <string name="newPhone">Новый номер телефона</string>
</resources>