<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.AddMarkFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:layout_marginBottom="120dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTypePet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeOfPet"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/pets">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/innerEditTextTypePet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/colorOfPet"
            app:startIconDrawable="@drawable/pets"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/innerEditTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextDescriptionOfPet"
            android:hint="@string/describedOfPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="6"
            android:autofillHints="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>